Fix typo (s/m_free/m_freem/)

This fixes PR kern/54419 "mbuf leak when deleting route" from sc dying.